Started Main Hub UI designing

--- a/src/html/main_hub.html
+++ b/src/html/main_hub.html
@@ -2,18 +2,24 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/default.css"/>
+
     <script src="../js/_scripts.js"></script>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+    <link rel="stylesheet" href="../css/_styles.css"/>
+
+    <link rel="stylesheet" href="../css/main_hub_sidebars.css"/>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+
   </head>
 
   <body>
 
-    <h1>Hello World!</h1>
+    <div id="right-sidebar">
+      
+      <div id="recent-txt">Recent</div>
 
-    <button id="btt">GO!</button>
+    </div>
 
   </body>
 
