--- a/src/html/new.html
+++ b/src/html/new.html
@@ -2,16 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/default.css"/>
+    <!-- <link rel="stylesheet" href="../css/default.css"/> -->
     <script src="../js/_scripts.js"></script>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+    <link rel="stylesheet" href="../css/_styles.css"/>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
   </head>
 
   <body>
 
-    <h1>Holaaaaa!</h1>
+    <h1>Template for new htmls</h1>
 
   </body>
 
