Added bottom bar UI (unfinished, planning to make it y-resizable)

--- a/src/html/main_hub.html
+++ b/src/html/main_hub.html
@@ -6,7 +6,6 @@
     <script src="../js/_scripts.js"></script>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <link rel="stylesheet" href="../css/_styles.css"/>
-
     <link rel="stylesheet" href="../css/main_hub_sidebars.css"/>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
@@ -18,6 +17,10 @@
     <div id="right-sidebar">
       
       <div id="recent-txt">Recent</div>
+
+    </div>
+
+    <div id="left-bottom-bar">
 
     </div>
 
