Work on Localization & Multi-Windows (dialogs, for things like warnings, project select menus and such)

--- a/src/html/start_hub.html
+++ b/src/html/start_hub.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
 
     <script src="../js/_scripts.js"></script>
+    <script src="../js/start_hub.js"></script>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <link rel="stylesheet" href="../css/_styles.css"/>
-    <link rel="stylesheet" href="../css/main_hub_sidebars.css"/>
+    <link rel="stylesheet" href="../css/start_hub.css"/>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+    <title>Grapheno - Start Hub</title>
 
   </head>
 
@@ -16,7 +18,7 @@
 
     <div id="right-sidebar">
       
-      <div id="recent-txt">Recent</div>
+      <div id="recent-txt">$m_recent_title</div>
 
     </div>
 
