Add custom themes and localization for titles

--- a/src/html/editor.html
+++ b/src/html/editor.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <script src="../js/_scripts.js"></script>
     <script src="../js/editor.js"></script>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <link rel="stylesheet" href="../css/_styles.css"/>
+    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
   </head>
 
   <body>
+
+    <title>$title_editor</title>
 
 
   </body>
