--- a/src/html/start_hub.html
+++ b/src/html/start_hub.html
@@ -5,16 +5,17 @@
 
     <script src="../js/_scripts.js"></script>
     <script src="../js/start_hub.js"></script>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <link rel="stylesheet" href="../css/_styles.css"/>
+    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <link rel="stylesheet" href="../css/start_hub.css"/>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Grapheno - Start Hub</title>
 
   </head>
 
   <body>
+
+    <title>$title_starthub</title>
 
     <div id="right-sidebar">
       
