--- a/src/html/start_hub.html
+++ b/src/html/start_hub.html
@@ -5,17 +5,23 @@
 
     <script src="../js/_scripts.js"></script>
     <script src="../js/start_hub.js"></script>
+    <script src="../js/lib/svg-inject.min.js"></script>
     <link rel="stylesheet" href="../css/_styles.css"/>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <link rel="stylesheet" href="../css/start_hub.css"/>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'unsafe-inline'; style-src 'unsafe-inline'; style-src-elem 'self'">
+    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'unsafe-inline'; style-src 'unsafe-inline'; style-src-elem 'self'">
 
   </head>
 
   <body>
 
     <title>$title_starthub</title>
+    
+    <div id="createnew_vector">
+        <img src="../../assets/media/icon/white/create_new_vector.svg" onload="SVGInject(this)">
+      <div>Create Vector Canvas</div>
+    </div>
 
     <div id="right-sidebar">
       
