Icons for create canvs btts and complete code refactor (wip)

--- a/src/html/start_hub.html
+++ b/src/html/start_hub.html
@@ -19,8 +19,17 @@
     <title>$title_starthub</title>
     
     <div id="createnew_vector">
-        <img src="../../assets/media/icon/white/create_new_vector.svg" onload="SVGInject(this)">
-      <div>Create Vector Canvas</div>
+
+      <img src="../../assets/media/icon/create_new_vector.svg">
+      <div>$m_new_vec_canvas</div>
+
+    </div>
+
+    <div id="createnew_pixel">
+
+      <img src="../../assets/media/icon/create_new_pixel.svg">
+      <div>$m_new_pix_canvas</div>
+
     </div>
 
     <div id="right-sidebar">
