Start to implement Pixi for canvas rendering

--- a/src/html/editor.html
+++ b/src/html/editor.html
@@ -5,6 +5,7 @@
     <script src="../js/_scripts.js"></script>
     <script src="../js/editor.js"></script>
     <link rel="stylesheet" href="../css/_styles.css"/>
+    <link rel="stylesheet" href="../css/editor.css"/>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
@@ -13,7 +14,6 @@
   <body>
 
     <title>$title_editor</title>
-
 
   </body>
 
