Fix editor grid weird offset & project files reestructuration

--- a/src/html/start_hub.html
+++ b/src/html/start_hub.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
 
-    <script src="../js/_scripts.js"></script>
-    <script src="../js/start_hub.js"></script>
+    <script src="../js/pages/_scripts.js"></script>
+    <script src="../js/pages/start_hub.js"></script>
     <link rel="stylesheet" href="../css/_styles.css"/>
     <link rel="stylesheet" href="../css/start_hub.css"/>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
