--- a/src/html/editor.html
+++ b/src/html/editor.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <script src="../js/_scripts.js"></script>
-    <script src="../js/editor.js"></script>
+    <script src="../js/pages/_scripts.js"></script>
+    <script src="../js/pages/editor.js"></script>
     <link rel="stylesheet" href="../css/_styles.css"/>
     <link rel="stylesheet" href="../css/editor.css"/>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
