Finish rewrite to TypeScript

--- a/src/html/editor.html
+++ b/src/html/editor.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <script src="../js-dist/ui/pages/_scripts.js"></script>
-    <script src="../js-dist/ui/pages/editor.js"></script>
+    <script>
+      require('../js-dist/ui/pages/editor')
+    </script>
     <link rel="stylesheet" href="../css/_styles.css"/>
     <link rel="stylesheet" href="../css/editor.css"/>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
